# copymind

./: .gitignore  README.md  pyproject.toml  script.sql
app/: main.py
app/api/v1/: api.py
app/api/v1/routes/: conversation_route.py  message_route.py
app/clients/: __init__.py  groq_client.py
app/config/: __init__.py  database.py  settings.py
app/constants/: __init__.py  enuns.py
app/core/config/: database.py  deps.py  settings.py
app/core/config/clients/: groq_client.py
app/core/constants/: __init__.py  enuns.py  tools.py
app/models/: __init__.py  base_model.py  conversation_model.py  message_model.py
app/repositories/: __init__.py  base_repository.py  conversation_repository.py
app/routers/v1/: message_router.py
app/schemas/: __init__.py  completion.py
app/schemas/chat_completion/: __init__.py  chat_completion_message_schema.py  chat_completion_schema.py  choice_schema.py  completion_usage_schema.py  structured_output_schema.py
app/schemas/conversation/: __init__.py  create.py  read.py  update.py
app/schemas/message/: __init__.py  create.py  list.py  update.py
app/services/: __init__.py  conversation_service.py  gpt_oss_ai_service.py  groq_service.py  llama_versatile_ai_service.py
app/tools/: __init__.py  registry.py
db/: script.sql
tests/: conftest.py  test_health_route.py
tests/models/: test_conversation_model.py
tests/v1/: test_message_route.py
