[project]
name = "copymind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
